--- a/Task_1_Iris_flower_classification.ipynb
+++ b/Task_1_Iris_flower_classification.ipynb
@@ -21,7 +21,7 @@
         "\n",
         "### **Understand the problem statement**\n",
         "\n",
-        "As a Data Scientist,We all of us have the indepth knowledge of Iris Dataset.The Data Set contains 3 classes of 50 instances of each,where each class refers to species of iris flower.The main objective of the problem statement is to build a classifier model by using advance data science techniques.Here I am trying play with different algorithms and its parameters to maximize the accuracy of model."
+        "The Data Set contains 3 classes of 50 instances of each,where each class refers to species of iris flower.The main objective of the problem statement is to build a classifier model by using advance data science techniques.Here I am trying play with different algorithms and its parameters to maximize the accuracy of model."
       ],
       "metadata": {
         "id": "mj_2ctC4JXTi"
